many new features continued: can now add from friendlist with one click and now only friends who are not already on the list will appear in the dropdown

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -726,7 +726,7 @@ padding: 1em;
   border: 1px dotted var(--color3);
   list-style: none;
   margin: .3em;
-  padding-right: .3em;
+  padding: 0em .3em;
   width: fit-content;
 }
 
