--- a/client/src/index.css
+++ b/client/src/index.css
@@ -714,6 +714,22 @@ padding: 1em;
 
 }
 
+.folder-div {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  text-align: center;
+  width: 90%;
+  padding: 1em;
+  border-radius: 5px;
+  background-color: var(--color4);
+  margin-bottom: 1em;
+}
+
+.folderEl {
+  
+}
+
 .listMemberList {
   display: flex;
   flex-wrap: wrap;
