--- a/client/src/index.css
+++ b/client/src/index.css
@@ -365,13 +365,15 @@ label {
   display: flex;
   flex-wrap: nowrap;
   width: 100%;
-  justify-content: space-evenly;
+  margin: 1em;
+  justify-content: space-between;
 }
 
 .changeInfoDiv {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  width: 33%;
   border-radius: 5px;
   padding: .5em;
 }
@@ -391,6 +393,7 @@ padding: 1em;
   padding: 1em;
   border-radius: 5px;
   width: 60%;
+  border: 2px solid black;
 }
 
 .accountDiv span:nth-child(even) {
@@ -400,11 +403,13 @@ padding: 1em;
 .accountForm {
   display: flex;
   flex-wrap: wrap;
-  width: 90%;
-  margin: auto;
+  width: 100%;
+  margin: 1em;
+  border: 2px solid black;
   margin-top: 1em;
   border-radius: 5px;
   background-color: var(--color1);
+  padding: .5em;
 }
 
 .accountForm div {
@@ -437,7 +442,8 @@ padding: 1em;
  @media (max-width: 600px) {
   .profileInfoDiv {
     flex-wrap: wrap;
-  }
+    justify-content: space-evenly;
+}
   .accountDiv {
     width: 100%;
   }
@@ -445,7 +451,8 @@ padding: 1em;
     flex-direction: row;
     height: fit-content;
     padding: .5em;
-    margin-top: 1em;
+  width: 80%;
+  margin-top: 1em;
   }
   .changeInfoDiv button {
     font-size: 12px;
@@ -756,16 +763,18 @@ padding: 1em;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  height: 110px;
+  overflow-y: auto;
 }
 
 .listMember {
   border-radius: 5px;
   transition: .1s linear;
-  border: 1px dotted var(--color3);
+  border: 1px solid var(--color3);
   list-style: none;
   margin: .3em;
   padding: 0em .3em;
-  width: fit-content;
+  width: 100%;
 }
 
 .listMember:hover {
