--- a/client/src/index.css
+++ b/client/src/index.css
@@ -60,7 +60,7 @@ header {
   border-radius: 5px;
   padding: 1em;
   margin: 1em;
-  color: var(--color3);
+  color: black;
   box-shadow: 5px 5px 6px 0px rgba(0, 0, 0, 0.5);
   border: 2px solid black;
   align-items: center;
@@ -71,7 +71,7 @@ header h1 {
 }
 
 nav a {
-  color: var(--color3);
+  color: black;
   display: flex;
   justify-content: center;
   transition: .1s linear;
@@ -166,7 +166,7 @@ nav a:hover {
 
 .homeSection a {
   width: 45%;
-  color: var(--color3);
+  color: black;
   border-radius: 5px;
   height: 100%;
   margin: 1em;
@@ -485,6 +485,7 @@ padding: 1em;
   color: var(--color5);
   width: 100%;
   border-radius: 5px;
+  border: 2px solid black;
   padding: 1em;
   margin: 1em;
   background-color: var(--color4);
@@ -493,6 +494,7 @@ padding: 1em;
 
 .friendsListDiv {
   background-color: var(--color4);
+  border: 2px solid black;
   width: 100%;
   margin: 1em;
   border-radius: 5px;
@@ -537,6 +539,7 @@ padding: 1em;
   display: flex;
   flex-wrap: wrap;
   border-radius: 5px;
+  border: 2px solid black;
   padding: .5em;
   margin-top: 1em;
   height: fit-content;
@@ -621,12 +624,15 @@ padding: 1em;
   position: absolute;
   background-color: #f9f9f9;
   color: var(--color3);
+  left: 0;
+  width: 100%;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
 .dropdown-content p {
   padding: .2em;
+  border: 1px solid black;
 }
 
 .dropdown-content p:hover {
@@ -763,7 +769,7 @@ padding: 1em;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  height: 110px;
+  max-height: 110px;
   overflow-y: auto;
 }
 
