--- a/client/src/index.css
+++ b/client/src/index.css
@@ -106,6 +106,7 @@ nav a:hover {
 
 .highlightText {
   text-decoration: underline;
+  font-size: 20px;
   font-weight: bold;
 }
 
@@ -198,7 +199,7 @@ nav a:hover {
     font-size: 28px;
   }
 
-  .homeInfo > p {
+  .homeInfo > p, .highlightText {
     font-size: 14px;
   }
 
@@ -227,7 +228,7 @@ nav a:hover {
     font-size: 24px;
   }
 
-  .homeInfo > p {
+  .homeInfo > p, .highlightText {
     font-size: 12px;
   }
 
@@ -463,6 +464,15 @@ padding: 1em;
     padding: .3em;
     }
  }
+
+/* PASSWORD RESET PAGE ___________________________________________________AWEOAJSEDFOAWJSEOFASEOFABJWEORTAEKJRTOAEKTOAKWOGTAKWTOKAWOETAGOTKO */
+
+.passResetForm {
+  margin: auto;
+  width: fit-content;
+}
+
+
 /* FRIEND PAGE ___________________________________________FASASDFAEAWEAW$t5q23ASDFAEFASFAEFASDaj;wlk3j4a;l5kjw;elakJF:SDoiUW:O#4 */
 
 .friendDiv {
@@ -734,6 +744,10 @@ padding: 1em;
 }
 
 /* LISTS )(!)@#(!)@()()()()()(((((((()))))))!@(#)!($)!*%)*^)!*#$)^!*#$%)!*#^$)!*^#)!*^)#*$^)!#*$^)!#*^$ */
+.deleteListModal {
+  border: black 2px solid;
+}
+
 .deleteModalBtnDiv {
   width: 200px;
   text-align: center;
@@ -820,6 +834,9 @@ background-color: var(--color5);
   display: flex;
   justify-content: center;
   flex-wrap: nowrap;
+  background-color: var(--color4);
+  border: 2px black solid;
+  border-radius: 5px;
 }
 
 .editListBtnDiv {
