--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1469,6 +1469,7 @@ label {
   text-align: center;
   padding: 0.25em 0.8em;
   margin: 0.5em;
+  height: 4em;
   transition: 0.25s;
   border: 1px solid var(--color3);
   color: var(--color5);
